cabal-version:      2.4
name:               CS-Foundation
version:            0.1.0.0

-- A URL where users can report bugs.
-- bug-reports:
license: MIT
author:             Christoffer Lind Andersen
maintainer:         57995582+Chri692u@users.noreply.github.com

extra-source-files:
    CHANGELOG.md
    README.md

library
  hs-source-dirs:      src
  exposed-modules:     Matrix, Algorithms               
  build-depends:       base, array
  default-language:    Haskell2010

executable matrix-io
    main-is:          MatrixIO.hs
    build-depends:    base, CS-Foundation
    hs-source-dirs:   examples
    default-language: Haskell2010

executable equation-system
    main-is:          EquationSystem.hs
    build-depends:    base, CS-Foundation
    hs-source-dirs:   examples
    default-language: Haskell2010

test-suite test-all
  type: exitcode-stdio-1.0
  main-is: TestAll.hs
  hs-source-dirs: test
  other-modules: TestMatrix
  build-depends: base, array, QuickCheck, CS-Foundation
  ghc-options: -Wall -threaded -Wno-orphans
  default-language: Haskell2010